--- a/GhasreMobile/Areas/User/Views/Order/Fractional.cshtml
+++ b/GhasreMobile/Areas/User/Views/Order/Fractional.cshtml
@@ -17,7 +17,7 @@
                     <th></th>
                     <th></th>
                     <th>
-                        <label class="text-3">شماره فاکتور @Model.OrdeId#  </label>
+                        <label class="text-3">شماره پیش فاکتور @Model.OrdeId#  </label>
                     </th>
                 </tr>
                 <tr>
