--- a/GhasreMobile/Areas/User/Views/Order/Fractionals.cshtml
+++ b/GhasreMobile/Areas/User/Views/Order/Fractionals.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<TblOrder>
 @{
-    ViewData["Title"] = "سابقه خرید";
+    ViewData["Title"] = "سابقه خرید اقساطی";
     Layout = "/Areas/User/Views/Shared/_Layout.cshtml";
 }
 
@@ -19,7 +19,7 @@
                         <th></th>
                         <th></th>
                         <th>
-                            <label class="text-3">شماره فاکتور @item.OrdeId#  </label>
+                            <label class="text-3">شماره پیش فاکتور @item.OrdeId#  </label>
                         </th>
                     </tr>
                     <tr>
