--- a/GhasreMobile/Areas/User/Views/Shared/_UserNavigation.cshtml
+++ b/GhasreMobile/Areas/User/Views/Shared/_UserNavigation.cshtml
@@ -5,6 +5,7 @@
     <a href="/User/Cart">سبد خرید</a>
     <a href="/User/Comparison">لیست مقایسه</a>
     <a href="/User/Order">سابقه خرید ها</a>
+    <a href="/User/Order/Fractionals">سابقه خرید اقساطی</a>
     <a href="/User/Bookmarks">لیست علاقه مندی ها</a>
     <a href="/User/Ticket">پشتیبانی</a>
     <a href="/User/Order/OnlineOrder">سفارش آنلاین</a>
