Templates and Renaming

--- a/GhasreMobile/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -290,7 +290,7 @@
                                             <span class="icon-holder">
                                                 <i uk-icon="clipboard"></i>
                                             </span>
-                                            <span class="title">تاپیک</span>
+                                            <span class="title">تالار گفتگو</span>
                                         </a>
                                     </li>
                                     <li class="nav-item active">
@@ -457,7 +457,7 @@
                                             <span class="icon-holder">
                                                 <i uk-icon="clipboard"></i>
                                             </span>
-                                            <span class="title">تاپیک</span>
+                                            <span class="title">تالار گفتگو</span>
                                         </a>
                                     </li>
                                     <li class="nav-item active">
