--- a/GhasreMobile/Areas/User/Views/Shared/_Layout.cshtml
+++ b/GhasreMobile/Areas/User/Views/Shared/_Layout.cshtml
@@ -64,7 +64,7 @@
                 <li>
                     <a href="/Blog">
                         <span class="text-3" uk-icon="browsers"></span>
-                        <span>وبلاگ ها</span>
+                        <span>اخبار</span>
                     </a>
                 </li>
                 <li>
@@ -89,7 +89,7 @@
                     <a href="/Contact">تماس با ما</a>
                     <a href="/About">درباره ما</a>
                     <a href="/Affiliate">شعب ما</a>
-                    <a href="/Blog">وبلاگ ها</a>
+                    <a href="/Blog">اخبار</a>
                     <a href="/Gallery">گالری</a>
                 </nav>
                 @if (User.Identity.IsAuthenticated)
