--- a/GhasreMobile/Views/Blog/Index.cshtml
+++ b/GhasreMobile/Views/Blog/Index.cshtml
@@ -11,8 +11,8 @@
 }
 
 <nav class="breadcrumb uk-padding-remove gap-b">
-    <a href="#">وبلاگ ها</a>
-    <a href="#" class="active">تمام وبلاگ ها</a>
+    <a href="#">اخبار</a>
+    <a href="#" class="active">تمام اخبار</a>
 </nav>
 
 <div class="blogs-grid">
