--- a/GhasreMobile/Views/Blog/ViewBlog.cshtml
+++ b/GhasreMobile/Views/Blog/ViewBlog.cshtml
@@ -18,7 +18,7 @@
 }
 
 <nav class="breadcrumb uk-padding-remove">
-    <a href="/Blog">وبلاگ ها</a>
+    <a href="/Blog">اخبار</a>
     <a href="#" class="active">@Model.Title</a>
 </nav>
 
