--- a/GhasreMobile/Views/Shared/Components/BlogsView/BlogsView.cshtml
+++ b/GhasreMobile/Views/Shared/Components/BlogsView/BlogsView.cshtml
@@ -6,7 +6,7 @@
         <div class="title gap-b">
             <a href="#" class="dot-container">
                 <img src="~/st/v/dot.svg" alt="" class="dot" />
-                <h3>وبلاگ ها</h3>
+                <h3>اخبار</h3>
             </a>
         </div>
 
