--- a/GhasreMobile/Views/Shared/_BlogBlock.cshtml
+++ b/GhasreMobile/Views/Shared/_BlogBlock.cshtml
@@ -4,7 +4,7 @@
 }
 
 <a  href="/ViewBlog/@Model.BlogId/@Model.Title.Replace(" ","-")" class="blog-block col mat-card">
-    <img src="~/Images/Blogs/@Model.MainImage" width="200" height="160" alt="وبلاگ" />
+    <img src="~/Images/Blogs/@Model.MainImage" width="200" height="160" alt="اخبار" />
     <h3>@Model.Title</h3>
     <p dir="rtl">
         @Model.Description
