--- a/GhasreMobile/Areas/Admin/Views/Home/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Home/Index.cshtml
@@ -178,7 +178,7 @@
                             <div class="user-box alert alert-success p-3 rounded shadow">
                                 <span uk-icon="clipboard"></span>
                                 <div class="user-title mb-3 mt-3">
-                                    <span class="icon-pic-success">تاپیک ها</span>
+                                    <span class="icon-pic-success">تالار گفتگو</span>
                                 </div>
                                 <div class="user-count">
                                     <span class="icon-pic-primary font-weight-bold">@Model.AllTopicCount</span>
