--- a/GhasreMobile/Areas/Admin/Views/Topic/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Topic/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<DataLayer.Models.TblTopic>
 
 @{
-    ViewData["Title"] = "تاپیک";
+    ViewData["Title"] = "تالار گفتگو";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
