--- a/GhasreMobile/Views/Shared/_Layout.cshtml
+++ b/GhasreMobile/Views/Shared/_Layout.cshtml
@@ -62,7 +62,7 @@
                 <li>
                     <a href="/Blog">
                         <span class="text-3" uk-icon="browsers"></span>
-                        <span>وبلاگ ها</span>
+                        <span>اخبار</span>
                     </a>
                 </li>
                 <li>
@@ -136,7 +136,7 @@
                     <a href="/Contact">تماس با ما</a>
                     <a href="/About">درباره ما</a>
                     <a href="/Affiliate">شعب ما</a>
-                    <a href="/Blog">وبلاگ ها</a>
+                    <a href="/Blog">اخبار</a>
                     <a href="/Gallery">گالری</a>
                 </nav>
                 @if (User.Identity.IsAuthenticated)
