--- a/GhasreMobile/Areas/User/Views/Order/FinalVerfity.cshtml
+++ b/GhasreMobile/Areas/User/Views/Order/FinalVerfity.cshtml
@@ -48,16 +48,18 @@
                     <div class="final-payment">مبلغ قابل پرداخت : <span>@Model.SumWithDiscount.ToString("#,0") تومان</span></div>
                 </div>
 
-                <button type="submit" class="btn btn-primary uk-margin-auto-top uk-margin-auto-left">
-                    ثبت و پرداخت
-                </button>
-                @if (Model.IsFractional == true)
-                {
-                    <input type="hidden" name="IsFractional" id="IsFractional" />
-                    <button type="submit" id="btnIsFractional" class="btn btn-primary uk-margin-auto-top uk-margin-auto-left">
-                        خرید اقساطی
+                <div class="rowr g-3  uk-margin-auto-left uk-margin-small-top">
+                    <button type="submit" class="btn btn-primary uk-margin-auto-top">
+                        ثبت و پرداخت
                     </button>
-                }
+                    @if (Model.IsFractional == true)
+                    {
+                        <input type="hidden" name="IsFractional" id="IsFractional" />
+                        <button type="submit" id="btnIsFractional" class="btn btn-secondary uk-margin-auto-top">
+                            خرید اقساطی
+                        </button>
+                    }
+                </div>
             </div>
         </div>
     </form>
