--- a/GhasreMobile/Views/Search/Index.cshtml
+++ b/GhasreMobile/Views/Search/Index.cshtml
@@ -73,6 +73,11 @@
             فقط کالا های موجود
         </label>
 
+         <label class="text-2 rowr uk-margin-small-bottom">
+            <input class="uk-checkbox" type="checkbox" name="fractional" />
+            فقط فروش های اقساطی
+        </label>
+
         <label class="text-2 rowr uk-margin-small-bottom">
             <input class="uk-checkbox" type="checkbox" name="discount" />
             فقط کالا های تخفیف دار
