--- a/GhasreMobile/wwwroot/css/pages/user.css
+++ b/GhasreMobile/wwwroot/css/pages/user.css
@@ -690,3 +690,5 @@ backdrop-filter: saturate(80%);
   .item-list > * {
     padding: 12px;
     border-bottom: 1px #e9e9e9 solid; }
+  .item-list > *:last-child {
+    border: 0; }
