--- a/GhasreMobile/Views/Shared/_ProductBlock.cshtml
+++ b/GhasreMobile/Views/Shared/_ProductBlock.cshtml
@@ -22,23 +22,54 @@
     <a href="/Search?catId=@Model.CatagoryId" class="category link-text">@Model.Catagory.Name </a>
     @if (Model.TblColor.Sum(i => i.Count) > 0)
     {
-        @if (Model.PriceAfterDiscount == 0)
+        @if (Model.TblSpecialOffer.Count > 0 && Model.TblSpecialOffer.SingleOrDefault().ValidTill >= DateTime.Now)
         {
-            <span class="price">
-                <span class="t">ريال</span>
-                <span>@Model.PriceBeforeDiscount.Value.ToString("#,0")</span>
-            </span>
+
+            if (Model.PriceAfterDiscount == 0)
+            {
+                var BeforeSumWithDiscount = Model.PriceBeforeDiscount - (long)(Math.Floor((double)(Model.PriceBeforeDiscount * Model.TblSpecialOffer.SingleOrDefault().Discount / 100)));
+                <h4 class="discount">
+                    @Model.PriceBeforeDiscount.Value.ToString("#,0")
+                </h4>
+                <span class="price">
+                    <span class="t">تومان</span>
+                    <span>@BeforeSumWithDiscount.Value.ToString("#,0")</span>
+                </span>
+            }
+            else
+            {
+                var AfterSumWithDiscount = Model.PriceAfterDiscount - (long)(Math.Floor((double)(Model.PriceAfterDiscount * Model.TblSpecialOffer.SingleOrDefault().Discount / 100)));
+                <span class="discount">
+                    <span>@Model.PriceBeforeDiscount.Value.ToString("#,0")</span>
+                </span>
+                <span class="price">
+                    <span>@Model.PriceAfterDiscount.Value.ToString("#,0")</span>
+                    <span class="t">تومان</span>
+                </span>
+            }
         }
         else
         {
-            <span class="discount">
-                <span>@Model.PriceBeforeDiscount.Value.ToString("#,0")</span>
-            </span>
-            <span class="price">
-                <span class="t">ريال</span>
-                <span>@Model.PriceAfterDiscount.Value.ToString("#,0")</span>
-            </span>
+
+            @if (Model.PriceAfterDiscount == 0)
+            {
+                <span class="price">
+                    <span class="t">تومان</span>
+                    <span>@Model.PriceBeforeDiscount.Value.ToString("#,0")</span>
+                </span>
+            }
+            else
+            {
+                <span class="discount">
+                    <span>@Model.PriceBeforeDiscount.Value.ToString("#,0")</span>
+                </span>
+                <span class="price">
+                    <span class="t">تومان</span>
+                    <span>@Model.PriceAfterDiscount.Value.ToString("#,0")</span>
+                </span>
+            }
         }
+
     }
     else
     {
