--- a/GhasreMobile/Areas/Admin/Views/Product/Create.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Product/Create.cshtml
@@ -126,15 +126,14 @@
                 <div class="form-row mt-3">
                     <div class="form-group col-md-5">
                         <label class="uk-text-bold">افزودن ویژگی</label>
-                        <input id="NewProperyName" class="form-control form-control-sm" placeholder="مثال : حافظه داخلی">
-                        <span id="CreateNewProperyErorr" class="text-danger"></span>
+                        <a onclick="CreateProperty()" data-toggle="modal" data-target="#modalSave" class="btn btn-info btn-sm text-white">افزودن</a>
+
                     </div>
                     <div class="form-group col-md-2 mt-md-4 pt-2">
-                        <a onclick="CreateProperty()" class="btn btn-info btn-sm text-white">افزودن</a>
                     </div>
                 </div>
                 <aside id="PropertyPanel">
-                    @await Component.InvokeAsync("PropertyListAdmin")
+                    
                 </aside>
                 <hr />
                 <div class="mt-3">
@@ -288,23 +287,9 @@
         }
 
         function CreateProperty() {
-            var Name = $("#NewProperyName").val();
-            if (Name == "" || Name == null) {
-                $("#CreateNewProperyErorr").html("لطفا نام ویژگی را وارد کنید");
-            } else {
-                $.post("/Admin/Property/Create?Name=" + Name, function (result) {
-                    if (result == "true") {
-                        $("#CreateNewProperyErorr").html("");
-                        $("#PropertyPanel").html("");
-                        $("#NewProperyName").val("");
-                        $.get("/Admin/Product/PropertyList", function (result) {
-                            $("#PropertyPanel").html(result);
-                        });
-                    } else {
-                        $("#CreateNewProperyErorr").html(result);
-                    }
-                });
-            }
+            $.get("/Admin/Product/PropertyList",function (result) {
+                $(".modal-content").html(result);
+            });            
         }
 
         $(".PriceInput").change(function () {
