--- a/GhasreMobile/Areas/Admin/Views/Property/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Property/Index.cshtml
@@ -27,6 +27,7 @@
                         <thead class="thead-light">
                             <tr>
                                 <th>نام</th>
+                                <th>عملیات</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -34,7 +35,12 @@
                             {
                                 <tr>
                                     <td>@item.Name</td>
-                                </tr>
+                                    <td>
+                                        <span data-placement="top" data-toggle="tooltip" title="" data-original-title="حذف">
+                                            <a onclick="Delete()" class="text-danger" uk-icon="trash-outline"></a>
+                                        </span>
+                                    </td>
+                                </tr>                               
                             }
                         </tbody>
                     </table>
@@ -66,6 +72,12 @@
                     }
                 });
             }
+        }
+
+        function Delete(id) {
+            $.post("/Admin/Property/Delete/" + id, function () {
+                window.location.reload();
+            });
         }
 
     </script>
