--- a/GhasreMobile/Areas/User/Views/Cart/Comparison.cshtml
+++ b/GhasreMobile/Areas/User/Views/Cart/Comparison.cshtml
@@ -4,4 +4,14 @@
     Layout = "/Areas/User/Views/Shared/_Layout.cshtml";
 }
 
-<partial name="_Comparison" model="Model" />
+@if (Model.Items.Count > 0)
+{
+    <partial name="_Comparison" model="Model" />
+}
+else
+{
+    <div class="mat-card details">
+        لیست مقایسه  شما خالیست
+    </div>
+}
+
