--- a/GhasreMobile/Areas/User/Views/Cart/Bookmarks.cshtml
+++ b/GhasreMobile/Areas/User/Views/Cart/Bookmarks.cshtml
@@ -4,9 +4,22 @@
     Layout = "/Areas/User/Views/Shared/_Layout.cshtml";
 }
 
-<div class="bookmarks mat-card">
-    @foreach (var item in Model)
-    {
-        <partial name="_ProductBlock" model="item" />
-    }
-</div>
+
+
+
+@if (Model.Count() > 0)
+{
+    <div class="bookmarks mat-card">
+        @foreach (var item in Model)
+        {
+            <partial name="_ProductBlock" model="item" />
+        }
+    </div>
+}
+else
+{
+    <div class="mat-card details">
+        لیست علاقه مندی های  شما خالیست
+    </div>
+}
+
