--- a/GhasreMobile/Views/ShopCart/_UserNavigation.cshtml
+++ b/GhasreMobile/Views/ShopCart/_UserNavigation.cshtml
@@ -1,5 +1,5 @@
 ﻿<nav class="user-navigation col">
     <a href="/ShopCart" class="active">سبد خرید</a>
     <a href="/ShopCart/Comparison">لیست مقایسه</a>
-    <a href="/ShopCart/Bookmarks">لیست علاقه مندی ها</a>
+    @*<a href="/ShopCart/Bookmarks">لیست علاقه مندی ها</a>*@
 </nav>
