--- a/GhasreMobile/Areas/Admin/Views/Product/Components/PropertyListAdmin.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Product/Components/PropertyListAdmin.cshtml
@@ -1,4 +1,4 @@
-﻿@*@model IEnumerable<DataLayer.Models.TblProperty>*@
+﻿@model IEnumerable<DataLayer.Models.TblProperty>
 
 
 
@@ -11,70 +11,37 @@
         <span aria-hidden="true">&times;</span>
     </button>
 </div>
-<div class="modal-body overflow-auto">
-    <ul class="d-flex">
-        <li class="col-4">
-            <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="id1">
-                <label class="form-check-label" for="id1">
-                    Default checkbox
-                </label>
-            </div>
-        </li>
-        <li class="col-4">
-            <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="id2">
-                <label class="form-check-label" for="id2">
-                    Default checkbox
-                </label>
-            </div>
-        </li>
-        <li class="col-4">
-            <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="id3">
-                <label class="form-check-label" for="id3">
-                    Default checkbox
-                </label>
-            </div>
-        </li>
+<div class="modal-body overflow-auto container-fluid">
+    <ul class="row">
+        @foreach (var item in Model)
+        {
+            <li class="col-4">
+                <div class="form-check">
+                    <span class="icon-holder uk-margin-small-right text-succses" uk-icon="add-circle-outline" onclick="SetInNewProduct(@item.PropertyId,@item.Name)"></span>
+                    <label class="form-check-label">
+                        @item.Name
+                    </label>
+                </div>
+            </li>
+        }
     </ul>
 </div>
 <div class="modal-footer justify-content-end">
-    <button type="submit" class="btn btn-success btn-sm text-white">ثبت<span class="icon-holder uk-margin-small-right" uk-icon="create-outline"></span></button>
 </div>
 
-
-
-@*@if (Model.Count() == 0)
-    {
-        <div class="form-inline col-md-7">
-            <span>ویژگی وجود ندارد</span>
-        </div>
+<script>
+    function SetInNewProduct(id, Name) {
+        alert(id);
+        alert(Name);
+        $("#PropertyPanel").append(`
+        <div id="Property" class="form-inline col-md-7 mt-2">
+        <label class="ml-5 p-0 col-md-2 uk-text-right justify-content-start">${Name}:</label>
+        <input id="PropetryNameId" name="PropertyId" type="hidden" value="${id}" />
+        <input id="PropertyValue" name="Value" class="form-control form-control-sm col-md-3">
+    </div>`);
     }
-    else
-    {
-        foreach (var item in Model)
-        {
-            <div id="Property" class="form-inline col-md-7 mt-2">
-                <label class="ml-5 p-0 col-md-2 uk-text-right justify-content-start">@item.Name:</label>
-                <input id="PropetryNameId" name="PropertyId" type="hidden" value="@item.PropertyId" />
-                @if (ViewBag.PropertyId != null)
-                {
-                    if (item.TblProductPropertyRel.Where(pp => pp.PropertyId == item.PropertyId && pp.ProductId == (int)ViewBag.PropertyId).SingleOrDefault() == null)
-                    {
-                        <input id="PropertyValue" name="Value" class="form-control form-control-sm col-md-3">
-                    }
-                    else
-                    {
-                        <input id="PropertyValue" name="Value" class="form-control form-control-sm col-md-3" value="@item.TblProductPropertyRel.Where(pp => pp.PropertyId == item.PropertyId && pp.ProductId == (int)ViewBag.PropertyId).SingleOrDefault().Value">
-                    }
+</script>
 
 
-                }
-                else
-                {
-                    <input id="PropertyValue" name="Value" class="form-control form-control-sm">
-                }
-            </div>
-        }
-    }*@
+@**@
+
