--- a/GhasreMobile/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -173,6 +173,14 @@
                                             <span class="title">سفارشات آفلاین</span>
                                         </a>
                                     </li>
+                                    <li class="nav-item active">
+                                        <a href="/Admin/Fractional" class="LoadingDiv">
+                                            <span class="icon-holder">
+                                                <i uk-icon="flash-off"></i>                                                
+                                            </span>
+                                            <span class="title">سفارشات اقساطی</span>
+                                        </a>
+                                    </li>
                                 </ul>
                             </li>
                             <li class="nav-item active">
