--- a/GhasreMobile/Areas/Admin/Views/Fractional/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Fractional/Index.cshtml
@@ -1,8 +1,11 @@
-﻿
+﻿@model IEnumerable<DataLayer.Models.TblOrder>
+
 @{
     ViewData["Title"] = "خرید اقساطی";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
+
+@using GhasreMobile.Utilities
 
 <div class="row flex-div">
     <div class="col-md-12 flex-div pb-3 pt-3">
@@ -41,35 +44,67 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
-                                <td>15151851</td>
-                                <td>1399</td>
-                                <td>
-                                    <span class="text-warning">در حال آماده سازی</span>
-                                    <span class="text-info">ارسال شده</span>
-                                    <span class="text-success">تکمیل شده</span>
-                                </td>
-                                <td>
-                                    <span data-placement="top" data-toggle="tooltip" data-original-title="جزئیات">
-                                        <a onclick="OrderInfo()" data-toggle="modal" data-target="#modalSave" class="text-primary" uk-icon="information-circle-outline"></a>
-                                    </span>
-                                </td>
-                                <td>
-                                    <span data-placement="top" data-toggle="tooltip" title="" data-original-title="تایید سفارش">
-                                        <a onclick="StatusOrder()" class="text-info" uk-icon="cash-outline"></a>
-                                    </span>
-                                    <span data-placement="top" data-toggle="tooltip" title="" data-original-title="ارسال سفارش">
-                                        <a onclick="SendOrder()" class="text-info" uk-icon="send-outline"></a>
-                                    </span>
-                                    <span data-placement="top" data-toggle="tooltip" title="" data-original-title="تکمیل سفارش">
-                                        <a onclick="DoneOrder()" class="text-success" uk-icon="checkmark-done-outline"></a>
-                                    </span>
-                                    <span data-placement="top" data-toggle="tooltip" title="" data-original-title="برگشت برای ارسال">
-                                        <a onclick="ChangeSendOrderStatus()" class="text-success" uk-icon="close-circle-outline"></a>
-                                    </span>
-                                    <span class="text-success">تکمیل شده</span>
-                                </td>
-                            </tr>
+                            @foreach (var item in Model)
+                            {
+                                <tr>
+                                    <td>@item.OrdeId</td>
+                                    <td>@item.DateSubmited.AllToShamsi()</td>
+                                    <td>
+
+                                        @if (item.Status == 0)
+                                        {
+                                            <span class="text-warning">در حال آماده سازی</span>
+                                        }
+                                        else if (item.Status == 1)
+                                        {
+                                            <span class="text-info">ارسال شده</span>
+                                        }
+                                        else if (item.Status == 2)
+                                        {
+                                            <span class="text-success">تکمیل شده</span>
+                                        }
+                                    </td>
+                                    <td>
+                                        <span data-placement="top" data-toggle="tooltip" data-original-title="جزئیات">
+                                            <a onclick="OrderInfo(@item.OrdeId)" data-toggle="modal" data-target="#modalSave" class="text-primary" uk-icon="information-circle-outline"></a>
+                                        </span>
+                                    </td>
+                                    <td>
+                                        @if (!item.IsFractional.Value)
+                                        {
+                                            <span data-placement="top" data-toggle="tooltip" title="" data-original-title="تایید سفارش">
+                                                <a onclick="StatusOrder(@item.OrdeId)" class="text-info" uk-icon="cash-outline"></a>
+                                            </span>
+                                        }
+
+                                        @if (item.Status == 0)
+                                        {
+                                            <span data-placement="top" data-toggle="tooltip" title="" data-original-title="ارسال سفارش">
+                                                <a onclick="SendOrder(@item.OrdeId)" class="text-info" uk-icon="send-outline"></a>
+                                            </span>
+                                        }
+                                        @if (item.Status == 1)
+                                        {
+                                            <span data-placement="top" data-toggle="tooltip" title="" data-original-title="تکمیل سفارش">
+                                                <a onclick="DoneOrder(@item.OrdeId)" class="text-success" uk-icon="checkmark-done-outline"></a>
+                                            </span>
+                                            <span data-placement="top" data-toggle="tooltip" title="" data-original-title="برگشت برای ارسال">
+                                                <a onclick="ChangeSendOrderStatus(@item.OrdeId)" class="text-success" uk-icon="close-circle-outline"></a>
+                                            </span>
+                                        }
+                                        @if (!item.IsPayed)
+                                        {
+                                            <span data-placement="top" data-toggle="tooltip" title="" data-original-title="پرداخت پیش قسط">
+                                                <a onclick="PayedOrder(@item.OrdeId)"  class="text-info" uk-icon="cash-outline"></a>
+                                            </span>
+                                        }
+                                        @if (item.Status == 2)
+                                        {
+                                            <span class="text-success">تکمیل شده</span>
+                                        }
+                                    </td>
+                                </tr>
+                            }
                         </tbody>
                     </table>
                 </div>
@@ -77,7 +112,7 @@
 
             <div class="card-footer bg-white">
                 <nav aria-label="Page navigation example">
-                    @*@await this.Component.InvokeAsync("Pager", new { PagingList = this.Model })*@
+                    @await this.Component.InvokeAsync("Pager", new { PagingList = this.Model })
                 </nav>
             </div>
         </div>
@@ -118,5 +153,12 @@
                 window.location.reload();
             });
         }
+
+        function PayedOrder(id) {
+            $.post("/Admin/Order/Payed/" + id, function () {
+                window.location.reload();
+            });
+        }
+
     </script>
 }
