--- a/GhasreMobile/Areas/Admin/Views/Ad/Components/Edit.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Ad/Components/Edit.cshtml
@@ -36,7 +36,7 @@
             <label class="custom-file-label" for="Image" data-browse="انتخاب" id="FileName">@Model.Image</label>
         </div>
         <br />
-        <span class="text-success">لطفا همه تصاویر در یک اندازه باشند</span>
+        <span class="text-success">لطفا اندازه تمام تصاویر انتخابی 220*342 باشد</span>
     </div>
     <div class="modal-footer justify-content-end">
         <button type="submit" class="btn btn-success btn-sm text-white">افزودن<span class="icon-holder uk-margin-small-right" uk-icon="add-circle-outline"></span></button>
