--- a/GhasreMobile/Areas/Admin/Views/Blog/Components/Create.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Blog/Components/Create.cshtml
@@ -34,6 +34,9 @@
             <input required asp-for="MainImage" type="file" class="custom-file-input form-control form-control-sm" accept="image/x-png,image/gif,image/jpeg" onchange="inputChanged(this)">
             <label class="custom-file-label" for="Image" data-browse="انتخاب" id="FileName">انتخاب تصویر</label>
         </div>
+        <br />
+        <span class="text-success">لطفا اندازه تصویر انتخابی 220*342 باشد</span>
+        <br />
         <span asp-validation-for="MainImage" class="text-danger"></span>
         <div class="form-row mt-3">
             <div class="form-group col-md-7">
