--- a/GhasreMobile/Areas/Admin/Views/Blog/Components/Edit.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Blog/Components/Edit.cshtml
@@ -33,6 +33,9 @@
             <input asp-for="MainImage" type="file" class="custom-file-input form-control form-control-sm" accept="image/x-png,image/gif,image/jpeg" onchange="inputChanged(this)">
             <label class="custom-file-label" for="Image" data-browse="انتخاب" id="FileName">@Model.MainImage</label>
         </div>
+        <br />
+        <span class="text-success">لطفا اندازه تصویر انتخابی 220*342 باشد</span>
+        <br />
         <div class="form-row mt-3">
             <div class="form-group col-md-7">
                 <label>کلمات کلیدی</label>
