--- a/GhasreMobile/Areas/Admin/Views/Notification/Components/Create.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Notification/Components/Create.cshtml
@@ -11,6 +11,9 @@
         <div class=" col-md-6">
             <input type="checkbox" name="SendAll" value="true" onchange="SendFunction(this)"> ارسال برای همه
         </div>
+        <div class=" col-md-6">
+            <input type="checkbox" name="SendEmployees" value="true" onchange="SendFunction(this)"> ارسال برای کارمندان
+        </div>
         <div class="form-row mr-2 mt-3">
             <div class="form-group col-md-3">
                 <label>شماره تماس</label>
