--- a/GhasreMobile/Views/Affiliate/StoreView.cshtml
+++ b/GhasreMobile/Views/Affiliate/StoreView.cshtml
@@ -1,6 +1,6 @@
 ﻿@model TblStore
 @{
-    ViewData["Title"] = "نمایندگی ها شعبه- " + Model.Name ;
+    ViewData["Title"] = "نمایندگی ها شعبه- " + Model.Name;
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -43,6 +43,8 @@
 <div id="map" class="uk-box-shadow-medium">
 
 </div>
+
+<img src="~/Images/Store/@Model.MainImage" width="800" height="360" class="mat uk-width-1-1" alt="عکس شعبه" />
 
 <div role="none" id="swAffiliates"></div>
 
